select dropdown overflow css fix

--- a/uni_ticket_bootstrap_italia_template/static/css/uni_ticket.scss
+++ b/uni_ticket_bootstrap_italia_template/static/css/uni_ticket.scss
@@ -262,5 +262,5 @@ select {
     top: 0!important;
 }
 .bootstrap-select-wrapper .dropdown.bootstrap-select .dropdown-menu .inner.show {
-    overflow-y: scroll;
+    max-height: 0px !important;
 }
